--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -2,7 +2,9 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/01.md`
+When a component is wrapped in React.Suspense, it can throw a promise if its
+data isn't available yet. When it will be, React will trigger a re-render of the
+component so it can render with the fetched data.
 
 ## Background
 
