exercise 5 - render as you fetch

--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -2,7 +2,8 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/05.md`
+Render as you fetch = fetch the data AND the code that needs it at the same time
+(no more waterfall effect)
 
 ## Background
 
